tests/fixtures/invalid/pow_none_bytes_int.py
# Cannot call pow() with None, Bytes, Int
x = pow(None, b"hello", 1)
